--- a/pages/20008.html
+++ b/pages/20008.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      categories of categories - contents in nLab
+      MonCat in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      categories of categories - contents
+      MonCat
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9395/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9394/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,8 +309,282 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="monoidal_categories">Monoidal categories</h4>
+
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a></strong></p>
+
+<h2 id="with_symmetry">With symmetry</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/braided+monoidal+category">braided monoidal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/balanced+monoidal+category">balanced monoidal category</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/twist">twist</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+category">symmetric monoidal category</a></p>
+</li>
+</ul>
+
+<h2 id="with_duals_for_objects">With duals for objects</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/category+with+duals">category with duals</a> (list of them)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/dualizable+object">dualizable object</a> (what they have)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/rigid+monoidal+category">rigid monoidal category</a>, a.k.a. <a class="existingWikiWord" href="/nlab/show/autonomous+category">autonomous category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/pivotal+category">pivotal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/spherical+category">spherical category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ribbon+category">ribbon category</a>, a.k.a. <a class="existingWikiWord" href="/nlab/show/tortile+category">tortile category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/compact+closed+category">compact closed category</a></p>
+</li>
+</ul>
+
+<h2 id="with_duals_for_morphisms">With duals for morphisms</h2>
+
+<ul>
+<li>
+<p><span class="newWikiWord">monoidal dagger-category<a href="/nlab/new/monoidal+dagger-category">?</a></span></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+dagger-category">symmetric monoidal dagger-category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/dagger+compact+category">dagger compact category</a></p>
+</li>
+</ul>
+
+<h2 id="with_traces">With traces</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/trace">trace</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/traced+monoidal+category">traced monoidal category</a></p>
+</li>
+</ul>
+
+<h2 id="closed_structure">Closed structure</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed monoidal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cartesian+closed+category">cartesian closed category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/closed+category">closed category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/star-autonomous+category">star-autonomous category</a></p>
+</li>
+</ul>
+
+<h2 id="special_sorts_of_products">Special sorts of products</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cartesian+monoidal+category">cartesian monoidal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/semicartesian+monoidal+category">semicartesian monoidal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/multicategory">multicategory</a></p>
+</li>
+</ul>
+
+<h2 id="semisimplicity">Semisimplicity</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/semisimple+category">semisimple category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fusion+category">fusion category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/modular+tensor+category">modular tensor category</a></p>
+</li>
+</ul>
+
+<h2 id="morphisms">Morphisms</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoidal+functor">monoidal functor</a></p>
+
+<p>(<a class="existingWikiWord" href="/nlab/show/lax+monoidal+functor">lax</a>, <a class="existingWikiWord" href="/nlab/show/oplax+monoidal+functor">oplax</a>, <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functor">strong</a> <a class="existingWikiWord" href="/nlab/show/bilax+monoidal+functor">bilax</a>, <a class="existingWikiWord" href="/nlab/show/Frobenius+monoidal+functor">Frobenius</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/braided+monoidal+functor">braided monoidal functor</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+functor">symmetric monoidal functor</a></p>
+</li>
+</ul>
+
+<h2 id="internal_monoids">Internal monoids</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoid+in+a+monoidal+category">monoid in a monoidal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/commutative+monoid+in+a+symmetric+monoidal+category">commutative monoid in a symmetric monoidal category</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/module+over+a+monoid">module over a monoid</a></p>
+</li>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/closed+monoidal+structure+on+presheaves">closed monoidal structure on presheaves</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Day+convolution">Day convolution</a></p>
+</li>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/coherence+theorem+for+monoidal+categories">coherence theorem for monoidal categories</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
+</li>
+</ul>
+
+<h2 id="in_higher_category_theory">In higher category theory</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoidal+2-category">monoidal 2-category</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/braided+monoidal+2-category">braided monoidal 2-category</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoidal+bicategory">monoidal bicategory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/cartesian+bicategory">cartesian bicategory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/k-tuply+monoidal+n-category">k-tuply monoidal n-category</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/little+cubes+operad">little cubes operad</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category">monoidal (∞,1)-category</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+%28%E2%88%9E%2C1%29-category">symmetric monoidal (∞,1)-category</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/compact+double+category">compact double category</a></p>
+</li>
+</ul>
+<div>
+<p><a href="/nlab/edit/monoidal+categories+-+contents">Edit this sidebar</a></p>
+</div></div></div>
+</div>
+</div>
+
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+</ul>
+</div>
+
+<h2 id="idea">Idea</h2>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>MonCat</mi> <mi>s</mi></msub></mrow><annotation encoding="application/x-tex">MonCat_{s}</annotation></semantics></math> or <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>MonCat</mi> <mi>ℓ</mi></msub></mrow><annotation encoding="application/x-tex">MonCat_\ell</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/2-category">2-category</a> whose <a class="existingWikiWord" href="/nlab/show/objects">objects</a> are <a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a>, <a class="existingWikiWord" href="/nlab/show/1-morphisms">1-morphisms</a> are <a class="existingWikiWord" href="/nlab/show/strong+monoidal+functors">strong monoidal functors</a> or <a class="existingWikiWord" href="/nlab/show/lax+monoidal+functors">lax monoidal functors</a>, respectively, and whose <a class="existingWikiWord" href="/nlab/show/2-morphisms">2-morphisms</a> are <a class="existingWikiWord" href="/nlab/show/monoidal+natural+transformations">monoidal natural transformations</a>.</p>
+
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/monoidal+adjunction">monoidal adjunction</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/change+of+enriching+category">change of enriching category</a></p>
+</li>
+</ul>
+<div>
+
 <p><strong><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo>,</mo><mi>r</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(n+1,r+1)</annotation></semantics></math>-categories of <a class="existingWikiWord" href="/nlab/show/%28n%2Cr%29-categories">(n,r)-categories</a></strong></p>
 
 <ul>
@@ -378,28 +652,28 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2Cn%29Cat">(∞,n)Cat</a></p>
 </li>
 </ul>
-</body></html>
+</div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 22, 2018 at 04:06:55.
-  See the <a href="https://ncatlab.org/nlab/history/categories of categories - contents" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December 22, 2018 at 04:07:33.
+  See the <a href="https://ncatlab.org/nlab/history/MonCat" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/categories+of+categories+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categories+of+categories+-+contents/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/categories+of+categories+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categories+of+categories+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/categories of categories - contents/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/MonCat" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/MonCat/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/categories+of+categories+-+contents" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/MonCat" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/categories+of+categories+-+contents" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/MonCat" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/categories+of+categories+-+contents" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/MonCat" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
