--- a/pages/16256.html
+++ b/pages/16256.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -821,7 +821,7 @@ margin-left: 0em;
 <p>Discussion in terms of <a class="existingWikiWord" href="/nlab/show/G-structures">G-structures</a>:</p>
 
 <ul>
-<li>Ulf Danielsson, Giuseppe Dibitetto, Adolfo Guarino, <em>KK-monopoles and G-structures in M-theory/type IIA reductions</em>, JHEP 1502 (2015) 096 (<a href="https://arxiv.org/abs/1411.0575">arXiv:1411.0575</a>)</li>
+<li><a class="existingWikiWord" href="/nlab/show/Ulf+Danielsson">Ulf Danielsson</a>, Giuseppe Dibitetto, Adolfo Guarino, <em>KK-monopoles and G-structures in M-theory/type IIA reductions</em>, JHEP 1502 (2015) 096 (<a href="https://arxiv.org/abs/1411.0575">arXiv:1411.0575</a>)</li>
 </ul>
 
 <h4 id="review">Review</h4>
@@ -857,14 +857,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 27, 2018 at 07:24:15.
+  Last revised on December 27, 2018 at 08:25:51.
   See the <a href="https://ncatlab.org/nlab/history/Kaluza-Klein monopole" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kaluza-Klein+monopole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kaluza-Klein+monopole/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/Kaluza-Klein+monopole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kaluza-Klein+monopole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kaluza-Klein+monopole" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kaluza-Klein+monopole/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/Kaluza-Klein+monopole" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kaluza-Klein+monopole" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Kaluza-Klein monopole/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
