--- a/pages/20011.html
+++ b/pages/20011.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      angle in nLab
+      Euler angle in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      angle
+      Euler angle
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9396/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,28 +309,197 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
-<h2 id="related_concepts">Related concepts</h2>
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="geometry">Geometry</h4>
+
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/distance">distance</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/trigonometry">trigonometry</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
+</li>
+</ul>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
+<li>
+<p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">little</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/structured+%28%E2%88%9E%2C1%29-topos">structured (∞,1)-topos</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Euler+angle">Euler angle</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/geometry+%28for+structured+%28%E2%88%9E%2C1%29-toposes%29">geometry (for structured (∞,1)-toposes)</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/generalized+scheme">generalized scheme</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">big</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/cohesive+%28%E2%88%9E%2C1%29-topos">cohesive (∞,1)-topos</a></li>
+</ul>
+</li>
+
+<li>
+<p><span class="newWikiWord">function algebras on ∞-stacks<a href="/nlab/new/function+algebras+on+%E2%88%9E-stacks">?</a></span></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/geometric+%E2%88%9E-stacks">geometric ∞-stacks</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id="constructions">Constructions</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a>, <a class="existingWikiWord" href="/nlab/show/free+loop+space+object">free loop space object</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+in+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+of+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">of a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/%C3%A9tale+%28%E2%88%9E%2C1%29-site">étale (∞,1)-site</a>, <a class="existingWikiWord" href="/nlab/show/Hochschild+cohomology">Hochschild cohomology</a> of <a class="existingWikiWord" href="/nlab/show/dg-algebra">dg-algebra</a>s</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/dg-geometry">dg-geometry</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/dg-scheme">dg-scheme</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/schematic+homotopy+type">schematic homotopy type</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/derived+noncommutative+geometry">derived noncommutative geometry</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/noncommutative+geometry">noncommutative geometry</a></li>
+</ul>
+</li>
+
+<li>
+<p>derived smooth geometry</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a>, <a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/derived+smooth+manifold">derived smooth manifold</a>, <a class="existingWikiWord" href="/nlab/show/dg-manifold">dg-manifold</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/smooth+%E2%88%9E-groupoid">smooth ∞-groupoid</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-Lie+algebroid">∞-Lie algebroid</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+symplectic+geometry">higher symplectic geometry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+Klein+geometry">higher Klein geometry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+Cartan+geometry">higher Cartan geometry</a></p>
+</li>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Hochschild+cohomology">Jones' theorem</a>, <a class="existingWikiWord" href="/nlab/show/Hochschild+cohomology">Deligne-Kontsevich conjecture</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality+for+geometric+stacks">Tannaka duality for geometric stacks</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href="/nlab/edit/higher+geometry+-+contents">Edit this sidebar</a>
+</p>
+</div></div></div>
+</div>
+</div>
+
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
+<h2 id="idea">Idea</h2>
+
+<p>The classical <em>Euler angles</em> furnish a <a class="existingWikiWord" href="/nlab/show/coordinate+system">coordinate system</a> on the <a class="existingWikiWord" href="/nlab/show/Lie+group">Lie group</a> <a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">SO(3)</a> of <a class="existingWikiWord" href="/nlab/show/rotations">rotations</a> in 3 dimensions.</p>
+
+<p>Generalized constructions apply to other <a class="existingWikiWord" href="/nlab/show/Lie+groups">Lie groups</a>.</p>
+
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Pauli+matrix">Pauli matrix</a></li>
 </ul>
 
 <h2 id="references">References</h2>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Angle">Angle</a></em></li>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Euler_angles">Euler</a></em></p>
+</li>
+
+<li>
+<p>WolframMath <em><a href="http://mathworld.wolfram.com/EulerAngles.html">Euler angles</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -338,22 +507,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 27, 2018 at 08:40:10.
-  See the <a href="https://ncatlab.org/nlab/history/angle" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December 27, 2018 at 08:54:30.
+  See the <a href="https://ncatlab.org/nlab/history/Euler angle" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/angle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/angle/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/angle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/angle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/angle/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Euler+angle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Euler angle/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/angle" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Euler+angle" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/angle" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Euler+angle" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/angle" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Euler+angle" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
